[package]
name = "smithy_itunes_search"
description = "A Smithy app that searches iTunes"
version = "0.1.0"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
default = ["wee_alloc"]

[dependencies]
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }

wasm-bindgen = { version = "0.2.48", features = ["nightly", "serde-serialize"] }
smithy = { version="0.0.6", path = "../smithy/crates/smithy", features = [
  "mouse-events",
  "input-events",
  "hash-change-events",
  # "smd-logs",
  # "browser-logs",
  # "event-logs",
] }
smithy_css = { path="../smithy_css/crates/smithy_css" }
web-sys = { version = "0.3.22", features = [
  "console",
  # "Document",
  # "DocumentFragment",
  "Element",
  # "Window",
  "Location",

  # elements
  "HtmlInputElement",

  # For fetching
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
] }
futures = "0.1.25"
wasm-bindgen-futures = "0.3.5"
js-sys = "0.3.5"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"